[package]
name = "display"
version = "0.1.0"
authors = ["Pavol Fulop <pavolfulop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
serde_json = "1.0.40"
log = "0.4"
serde_derive = "1.0.99"
serde = {version = "1.0.99", features = ["derive"] }
sentry = "0.12.0"