[package]
name = "display"
version = "0.1.0"
authors = ["Pavol Fulop <pavolfulop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
serde_json = "1.0.41"
log = "0.4"
rusoto_core = "0.40"
serde_derive = "1.0.101"
serde = {version = "1.0.101", features = ["derive"] }
simple_logger = "1.3.0"
dynomite = "0.6.0"
futures = "0.1.29"
tokio = "0.1.22"
lambda_http = "0.1.1"