[package]
name = "common"
version = "0.1.0"
authors = ["Pavol Fulop <pavolfulop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.2.1"
serde_json = "1.0.41"
log = "0.4"
rusoto_core = "0.42"
serde_derive = "1.0.103"
serde = {version = "1.0.103", features = ["derive"] }
simple_logger = "1.3.0"
dynomite = "0.7.0"
futures = "0.1.29"
tokio = { version = "0.2", features = ["full"] }
lambda_http = "0.1.1"
quick-error="1.2.2"
rusoto_apigatewaymanagementapi="0.42.0"
bytes="0.4.12"
failure="0.1.6"