[package]
name = "common"
version = "0.1.0"
authors = ["Pavol Fulop <pavolfulop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.59"
log = "0.4"
rusoto_core = "0.45"
serde_derive = "1.0.103"
serde = {version = "1.0.117", features = ["derive"] }
dynomite = "0.10.0"
tokio = { version = "0.2", features = ["full"] }
rusoto_apigatewaymanagementapi="0.45.0"
bytes="0.5.6"
rusoto_dynamodbstreams="0.45.0"
aws_lambda_events = { git = "https://github.com/sbruton/aws-lambda-events/", branch = "master"}