[package]
name = "connections"
version = "0.1.0"
authors = ["Pavol Fulop <pavolfulop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
serde_json = "1.0.44"
log = "0.4"
rusoto_core = "0.45"
serde_derive = "1.0.104"
serde = {version = "1.0.117", features = ["derive"] }
simple_logger = "1.11.0"
lambda_http = "0.1.1"
rusoto_apigatewaymanagementapi="0.45.0"
failure= "0.1.6"
tokio = { version = "0.2", features = ["full"] }
aws_lambda_events = { git = "https://github.com/sbruton/aws-lambda-events/", branch = "master"}
common = { path = "../common" }