[package]
name = "selection"
version = "0.1.0"
authors = ["Pavol Fulop <pavolfulop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
dynomite = "0.7.0"
log = "0.4"
tokio = { version = "0.2", features = ["full"] }
simple_logger = "1.3.0"
lambda_runtime = "0.2.1"
futures = "0.1.29"
serde = {version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
failure="0.1.6"